--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,20 @@
     "@auth0/angular-jwt": "^5.2.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@hello-pangea/dnd": "^18.0.1",
     "@mui/material": "^7.0.2",
     "axios": "^1.8.4",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.1",
     "react-scripts": "^5.0.1",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^4.2.4",
     "webpack": "^5.99.5"
   },
